tests/reference/asr-test_int_semantic_error-44fe25e.stderr
semantic error: Unsupported type annotation: int
 --> tests/errors/test_int_semantic_error.py:4:8
  |
4 |     x: int = 1
  |        ^^^ 
